# credit-score-modelling

./: .dvcignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt  setup.py  template.py
config/: config.yaml  schema.yaml
notebooks/: EDA.ipynb  modelling_with_optbinning.ipynb
saved_models/: model_pusher_artifact.json  scorecard_model.pkl
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_prediction.py  model_pusher.py  model_trainer.py
src/config/: load_config.py
src/entity/: artifacts_entity.py  config_entity.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: data_ingestion_pipeline.py  data_transformation_pipeline.py  data_validation_pipeline.py  model_evaluation_pipeline.py  model_pusher_pipeline.py  model_trainer_pipeline.py  predict.py
src/schema/: prediction_schema.py
src/utils/: file_ops.py  metrics.py  mlflow_ops.py  risk_level.py
